--- a/ChocolateShopFrontEnd/pom.xml
+++ b/ChocolateShopFrontEnd/pom.xml
@@ -39,6 +39,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- Link backend project -->
+		<dependency>
+			<groupId>net.mo</groupId>
+			<artifactId>ChocolateShopBackEnd</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
