--- a/ChocolateShopBackEnd/pom.xml
+++ b/ChocolateShopBackEnd/pom.xml
@@ -31,10 +31,10 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
+			    <exclusion>
+			       <groupId>commons-logging</groupId>
+			       <artifactId>commons-logging</artifactId>
+			    </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -69,6 +69,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
+			<exclusions>
+			    <exclusion>
+			       <groupId>commons-logging</groupId>
+			       <artifactId>commons-logging</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
