--- a/ChocolateShopBackEnd/pom.xml
+++ b/ChocolateShopBackEnd/pom.xml
@@ -31,10 +31,10 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 			<exclusions>
-			    <exclusion>
-			       <groupId>commons-logging</groupId>
-			       <artifactId>commons-logging</artifactId>
-			    </exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -51,6 +51,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>${spring.version}</version>
 		</dependency>
 		<!-- H2 Database -->
 		<dependency>
@@ -70,12 +75,13 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
 			<exclusions>
-			    <exclusion>
-			       <groupId>commons-logging</groupId>
-			       <artifactId>commons-logging</artifactId>
-			    </exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- For validation -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
