--- a/ChocolateShopFrontEnd/pom.xml
+++ b/ChocolateShopFrontEnd/pom.xml
@@ -33,10 +33,10 @@
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 			<exclusions>
-			    <exclusion>
-			       <groupId>commons-logging</groupId>
-			       <artifactId>commons-logging</artifactId>
-			    </exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -55,6 +55,12 @@
 			<groupId>net.mo</groupId>
 			<artifactId>ChocolateShopBackEnd</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<!-- Apache Commons IO-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
 	<build>
