--- a/ChocolateShopFrontEnd/pom.xml
+++ b/ChocolateShopFrontEnd/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<javaee.version>7.0</javaee.version>
 		<spring.version>4.3.6.RELEASE</spring.version>
+		<spring.security.version>4.2.2.RELEASE</spring.security.version>
 	</properties>
 	<dependencies>
 		<!-- JAVA EE API -->
@@ -44,6 +45,28 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<!-- Spring webflow -->
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>2.4.4.RELEASE</version>
+		</dependency>
+		<!-- Spring Security -->
+		<dependency>
+		     <groupId>org.springframework.security</groupId>
+		     <artifactId>spring-security-config</artifactId>
+		     <version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+		     <groupId>org.springframework.security</groupId>
+		     <artifactId>spring-security-web</artifactId>
+		     <version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+		     <groupId>org.springframework.security</groupId>
+		     <artifactId>spring-security-taglibs</artifactId>
+		     <version>${spring.security.version}</version>
+		</dependency>
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
@@ -56,7 +79,7 @@
 			<artifactId>ChocolateShopBackEnd</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<!-- Apache Commons IO-->
+		<!-- Apache Commons IO -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
